# GDGoC-Team1-SeoulFestRecommender

./: .gitignore  ARCHITECTURE.md  CHANGES_SUMMARY.md  Makefile  README.md  SEOUL_EVENTS_INTEGRATION.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: auth.py  chat.py  festival.py  seoul_event.py
backend/app/core/: config.py  dependencies.py  llm_client.py  security.py
backend/app/db/: database.py  init_db.py
backend/app/entity/: base_entity.py  conversation_entity.py  festival_entity.py  festival_like_entity.py  message_entity.py  seoul_event_entity.py  seoul_event_like_entity.py  user_entity.py
backend/app/models/: chat.py  festival.py  seoul_event.py  user.py
backend/app/repository/: base_repo.py  festival_like_repo.py  festival_repo.py  seoul_event_like_repo.py  seoul_event_repo.py  user_repo.py
backend/app/services/: collect_event.py  embedding_service.py  llm_service.py
backend/app/services/chat_service/: __init__.py  graph.py  prompts.py  types.py
backend/app/worker/: collect_event_worker.py  embedding_processor.py
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/liked/: page.tsx
frontend/app/signup/: page.tsx
frontend/components/: chat-bot.tsx  event-calendar.tsx  event-list.tsx  header.tsx  login-modal.tsx
frontend/contexts/: auth-context.tsx
frontend/lib/: api.ts  events-data.ts
